EEVEE Next: Crash with VDB #115594

Closed
opened 2023-11-30 05:06:09 +01:00 by Sun Kim · 1 comment
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-28 21:58, hash: 09caf5969010
Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-22 21:44, hash: a13696a242fb

Caused by something between 2023-11-22 21:44, hash: a13696a242fb and 2023-11-24 00:19, hash: 23430f4db868

Short description of error
Blender crash with EEVEE Next viewport if there's VDB (or volume created by geometry nodes).

Exact steps for others to reproduce the error

  • Load a VDB file to the scene or make a volume (using Mesh to Volume node for example) with geometry nodes
  • Switch renderer to EEVEE (Next)
  • Switch to render preview
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-28 21:58, hash: `09caf5969010` Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-22 21:44, hash: `a13696a242fb` Caused by something between 2023-11-22 21:44, hash: `a13696a242fb` and 2023-11-24 00:19, hash: `23430f4db868` **Short description of error** Blender crash with EEVEE Next viewport if there's VDB (or volume created by geometry nodes). **Exact steps for others to reproduce the error** - Load a VDB file to the scene or make a volume (using `Mesh to Volume` node for example) with geometry nodes - Switch renderer to EEVEE (Next) - Switch to render preview
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-30 05:06:10 +01:00
Sun Kim changed title from EEVEE Next: Crash with Mesh to Volume or VDB? to EEVEE Next: Crash with VDB 2023-11-30 05:06:28 +01:00

Confirmed with the following error traced to console:

ERROR (gpu.shader): GPU_material_compile FragShader:
      |
 9304 | var_attrs.v0 = attr_load_vec4(aiA6lW6LJGca);
      |
      | Error: C1503: undefined variable "attr_load_vec4"
Confirmed with the following error traced to console: ``` ERROR (gpu.shader): GPU_material_compile FragShader: | 9304 | var_attrs.v0 = attr_load_vec4(aiA6lW6LJGca); | | Error: C1503: undefined variable "attr_load_vec4" ```
Jesse Yurkovich added
Module
EEVEE & Viewport
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-30 05:51:20 +01:00
Philipp Oeser added the
Interest
EEVEE
label 2023-11-30 13:00:31 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-05 16:46:57 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:02:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115594
No description provided.