Fix #115594: EEVEE Next: Crash with VDB